meeting authorizations: add API for user get item
