# wazo_confd/plugins/meeting_authorization/api.yml
@@ -66,6 +66,28 @@ paths:
             $ref: '#/definitions/MeetingAuthorizationItems'
         '404':
           $ref: '#/responses/NotFoundError'
+  /users/me/meetings/{meeting_uuid}/authorizations/{authorization_uuid}:
+    get:
+      operationId: get_user_meeting_authorization
+      summary: Read the guest authorization to enter a meeting
+      description: '**Required ACL:** confd.users.me.meetings.{meeting_uuid}.authorizations.{authorization_uuid}.read'
+      tags:
+      - meeting_authorizations
+      - meetings
+      - guests
+      parameters:
+      - $ref: '#/parameters/guest_uuid'
+      - $ref: '#/parameters/meeting_uuid'
+      - $ref: '#/parameters/authorization_uuid'
+      responses:
+        '200':
+          description: Authorization details
+          schema:
+            $ref: '#/definitions/MeetingAuthorization'
+        '400':
+          $ref: '#/responses/CreateError'
+        '404':
+          $ref: '#/responses/NotFoundError'
   /user/me/meetings/{meeting_uuid}/authorizations/{authorization_uuid}/accept:
     put:
       operationId: put_user_meeting_authorization_accept
