# wazo_confd/plugins/meeting_authorization/resource.py
@@ -138,6 +138,40 @@ class UserMeetingAuthorizationList(ListResource, _MeResourceMixin):
         return {'total': total, 'items': self.schema().dump(items, many=True)}
 
 
+class UserMeetingAuthorizationItem(ItemResource, _MeResourceMixin):
+
+    model = MeetingAuthorization
+    schema = MeetingAuthorizationSchema
+
+    def __init__(self, service, meeting_authorization_dao):
+        self.service = service
+        self.meeting_authorization_dao = meeting_authorization_dao
+
+    @required_acl(
+        'confd.users.me.meetings.{meeting_uuid}.authorizations.{authorization_uuid}.read'
+    )
+    def get(self, meeting_uuid, authorization_uuid):
+        ids = {
+            'meeting_uuid': meeting_uuid,
+            'authorization_uuid': authorization_uuid,
+        }
+        ids = MeetingAuthorizationIDSchema().load(ids)
+        user_uuid = self._find_user_uuid()
+
+        try:
+            model = self.meeting_authorization_dao.get(
+                ids['meeting_uuid'],
+                ids['authorization_uuid'],
+                owner=user_uuid,
+            )
+        except NotFoundError as e:
+            raise errors.not_found(
+                'meeting_authorization', 'MeetingAuthorization', **e.metadata
+            )
+
+        return self.schema().dump(model)
+
+
 class UserMeetingAuthorizationAccept(ItemResource, _MeResourceMixin):
 
     model = MeetingAuthorization
